force-app/src/objects/OrderApi__Invoice__c.object
<CustomObject>
    <description>Invoices track sales to customers that are not immediately paid for.</description>
    <fields>
        <fullName>FontevaReports__Posted_Age__c</fullName>
        <formula>Today() - OrderApi__Posted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the number of days since the Posted Date.</inlineHelpText>
        <label>Posted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The A/R account to use when posting to receivables. Default value is the linked Business Group&apos;s A/R account.</description>
        <inlineHelpText>**System Calculated/Override** The A/R account to use when posting to receivables. Default value is the linked Business Group&apos;s A/R account.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Adjustments__c</fullName>
        <description>**System Calculated** The sum of the value of related invoice line&apos;s &quot;Total&quot; field if the line&apos;s &quot;Is Adjustment&quot; field is checked.</description>
        <inlineHelpText>**System Calculated** The sum of the value of related invoice line&apos;s &quot;Total&quot; field if the line&apos;s &quot;Is Adjustment&quot; field is checked.</inlineHelpText>
        <label>DEPRECATED</label>
        <summarizedField>OrderApi__Invoice_Line__c.OrderApi__Subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Invoice_Line__c.OrderApi__Is_Adjustment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderApi__Invoice_Line__c.OrderApi__Is_Posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderApi__Invoice_Line__c.OrderApi__Is_Child_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Invoice_Line__c.OrderApi__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Paid__c</fullName>
        <description>**System Calculated/Override** Sum of all payments received for the Invoice.</description>
        <inlineHelpText>**System Calculated/Override** Sum of all payments received for the Invoice.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Refunded__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** The total amount of refunds that have been posted related to this Invoice.</description>
        <inlineHelpText>** System Calculated ** The total amount of refunds that have been posted related to this Invoice.</inlineHelpText>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Balance_Due__c</fullName>
        <description>**System Calculated** Total - Total Payments</description>
        <formula>OrderApi__Total__c  - OrderApi__Amount_Paid__c + OrderApi__Amount_Refunded__c - OrderApi__Credits_Applied__c + OrderApi__Credits_and_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Total - Total Payments</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Billing_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the invoice will populate the billing contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the invoice will populate the billing contact field.</inlineHelpText>
        <label>Calculate Billing Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Due_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the system will calculate the Due Date for the Invoice based on the selected Payment Terms.</description>
        <inlineHelpText>When checked, the system will calculate the Due Date for the Invoice based on the selected Payment Terms.</inlineHelpText>
        <label>Auto-Calculate Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s shipping address is used. The contact on the invoice will populate the shipping contact field.</description>
        <inlineHelpText>If checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s shipping address is used. The contact on the invoice will populate the shipping contact field.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credits_Applied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated/Override** Sum of all payments received using credits on the account for the Invoice.</description>
        <inlineHelpText>**System Calculated/Override** Sum of all payments received using credits on the account received for the Invoice.</inlineHelpText>
        <label>Credits Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credits_and_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated** The sum of all credits and adjustments related to this invoice.</description>
        <inlineHelpText>**System Calculated** The sum of all credits and adjustments related to this invoice.</inlineHelpText>
        <label>Credit Notes/Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;), OrderApi__Account__r.Name, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName)</formula>
        <inlineHelpText>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Reference_Number__c</fullName>
        <description>**System Calculated/Override/Conditional** Customer Reference Number (PO) flows down from related Sales Order (if applicable).</description>
        <inlineHelpText>**System Calculated/Override/Conditional** Customer Reference Number (PO) flows down from related Sales Order (if applicable).</inlineHelpText>
        <label>Customer Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Days_Overdue__c</fullName>
        <description>**System Calculated** If an invoice is overdue the integer value of today&apos;s date - the invoice due date will be used to populate this field.</description>
        <formula>IF(OrderApi__Is_Overdue__c,Today() - OrderApi__Due_Date__c,0)</formula>
        <inlineHelpText>**System Calculated** If an invoice is overdue the integer value of today&apos;s date - the invoice due date will be used to populate this field.</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Internal-facing description for the Invoice. Does not display by default on Invoices, Receipts, and Templates containing Invoice information.</description>
        <inlineHelpText>Internal-facing description for the Invoice. Does not display by default on Invoices, Receipts, and Templates containing Invoice information.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Due_Date__c</fullName>
        <description>**System Calculated/Override** The date that payment is due for the invoice. By default the system derives the date from the invoice date and payment terms.</description>
        <inlineHelpText>**System Calculated/Override** The date that payment is due for the invoice. By default the system derives the date from the invoice date and payment terms.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Encrypted_Id__c</fullName>
        <description>This field shows this record&apos;s encrypted id used for external pages.</description>
        <inlineHelpText>This field shows this record&apos;s encrypted id used for external pages.</inlineHelpText>
        <label>Encrypted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**Required** Select &quot;Account&quot; if the invoice should be billed to the related account, select &quot;Contact&quot; if the invoice should be sent to the related &quot;Contact&quot;.</description>
        <inlineHelpText>**Required** Select &quot;Account&quot; if the invoice should be billed to the related account, select &quot;Contact&quot; if the invoice should be sent to the related &quot;Contact&quot;.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Has_Payments__c</fullName>
        <description>**System Calculated** True if the Invoice has at least one payment applied against it.</description>
        <formula>OrderApi__Payment_Count__c != 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** True if the Invoice has at least one payment applied against it.</inlineHelpText>
        <label>Has Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Has_Refunds__c</fullName>
        <description>**System Calculated** True if the Invoice has one or more applied credit memos (&quot;Cash Payments&quot;) agains it.</description>
        <formula>OrderApi__Refund_Count__c != 0</formula>
        <inlineHelpText>**System Calculated** True if the Invoice has one or more applied credit memos (&quot;Cash Payments&quot;) agains it.</inlineHelpText>
        <label>Has Refunds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required/System Calculated/Override** The invoice date is derived from the parent sales order object.</description>
        <inlineHelpText>**Required/System Calculated/Override** The invoice date is derived from the parent sales order object.</inlineHelpText>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when the Invoice was never posted and later cancelled as a result of the linked Sales Order being cancelled.</description>
        <inlineHelpText>**System Calculated/Override** Checked when the Invoice was never posted and later cancelled as a result of the linked Sales Order being cancelled.</inlineHelpText>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Overdue__c</fullName>
        <description>**System Calculated** If an invoice is posted and the due date is in the past with an outstanding balance this field will be checked.</description>
        <formula>OrderApi__Is_Posted__c &amp;&amp; !OrderApi__Is_Voided__c &amp;&amp; OrderApi__Balance_Due__c &gt; 0 &amp;&amp; OrderApi__Due_Date__c &lt; Today()</formula>
        <inlineHelpText>**System Calculated** If an invoice is posted and the due date is in the past with an outstanding balance this field will be checked.</inlineHelpText>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Paid__c</fullName>
        <description>**System Calculated** If an invoice balance due is less than or equal to 0 and flagged as &quot;Posted&quot; this field will be checked.</description>
        <formula>OrderApi__Balance_Due__c &lt;= 0 &amp;&amp; OrderApi__Is_Posted__c</formula>
        <inlineHelpText>**System Calculated** If an invoice balance due is less than or equal to 0 and flagged as &quot;Posted&quot; this field will be checked.</inlineHelpText>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the invoice has been posted and transactions (journal entries) have been created.</description>
        <inlineHelpText>Checked if the invoice has been posted and transactions (journal entries) have been created.</inlineHelpText>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Invoice will be voided and any &quot;Receivable&quot; transactions will be reversed. Default unchecked.</description>
        <inlineHelpText>When checked the Invoice will be voided and any &quot;Receivable&quot; transactions will be reversed. Default unchecked.</inlineHelpText>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Count__c</fullName>
        <description>**System Calculated** Count of the number of items related to the invoice.</description>
        <inlineHelpText>**System Calculated** Count of the number of items related to the invoice.</inlineHelpText>
        <label>Item Count</label>
        <summaryForeignKey>OrderApi__Invoice_Line__c.OrderApi__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>Optional memo that will display on the invoice sent to the customer as well as on customer statements.</description>
        <inlineHelpText>Optional memo that will display on the invoice sent to the customer as well as on customer statements.</inlineHelpText>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Paid_Date__c</fullName>
        <description>**System Calculated/Override** The date the invoice was paid in full.</description>
        <inlineHelpText>**System Calculated/Override** The date the invoice was paid in full.</inlineHelpText>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated/Override** Count of the number of &quot;Payment&quot; Receipts related to the Invoice.</description>
        <inlineHelpText>**System Calculated/Override** Count of the number of &quot;Payment&quot; Receipts related to the Invoice.</inlineHelpText>
        <label>Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment terms for the invoice. If not defined on record creation the default terms defined on the Commerce custom setting will be used.</description>
        <inlineHelpText>The payment terms for the invoice. If not defined on record creation the default terms defined on the Commerce custom setting will be used.</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>**System Calculated/Override** The date the receivable transaction posted.</description>
        <inlineHelpText>**System Calculated/Override** The date the receivable transaction posted.</inlineHelpText>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Refund_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated/Override** Count of &quot;Refund&quot; Receipts related to the Invoice.</description>
        <inlineHelpText>**System Calculated/Override** Count of &quot;Refund&quot; Receipts related to the Invoice.</inlineHelpText>
        <label>Number of Refunds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Sales Order that generated the Invoice.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Sales Order that generated the Invoice.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Scheduled_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Scheduled Payment.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Scheduled Payment.</inlineHelpText>
        <label>Scheduled Payment</label>
        <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Shipping Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Shipping Details is checked.</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>**System Calculated/Override** Primary indicator of the invoice&apos;s current status. Default value is &quot;Draft&quot;.</description>
        <inlineHelpText>**System Calculated/Override** Primary indicator of the invoice&apos;s current status. Default value is &quot;Draft&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Subscription. Populated only when the Invoice is sent from a Subscription that is scheduled for auto-invoice on an &quot;Installment&quot; payment plan.</description>
        <inlineHelpText>** System Calculated ** Link to related Subscription. Populated only when the Invoice is sent from a Subscription that is scheduled for auto-invoice on an &quot;Installment&quot; payment plan.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Invoices (Installments)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** The sum of the value of each related invoice detail line &quot;Subtotal&quot; field.</description>
        <inlineHelpText>**System Calculated** The sum of the value of each related invoice detail line &quot;Subtotal&quot; field.</inlineHelpText>
        <label>Subtotal</label>
        <summarizedField>OrderApi__Invoice_Line__c.OrderApi__Subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Invoice_Line__c.OrderApi__Is_Adjustment__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Invoice_Line__c.OrderApi__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Calculated ** Relates Subscription Installments to Subscription Terms.</description>
        <inlineHelpText>System Calculated ** Relates Subscription Installments to Subscription Terms.</inlineHelpText>
        <label>Term</label>
        <referenceTo>OrderApi__Renewal__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <description>**System Calculated** Subtotal</description>
        <formula>OrderApi__Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Subtotal</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Voided_Date__c</fullName>
        <description>**System Calculated** The date the invoice was voided.</description>
        <inlineHelpText>**System Calculated** The date the invoice was voided.</inlineHelpText>
        <label>Voided Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>OrderApi__All1</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OrderApi__Status__c</columns>
        <columns>OrderApi__Customer_Link__c</columns>
        <columns>OrderApi__Posted_Date__c</columns>
        <columns>OrderApi__Invoice_Date__c</columns>
        <columns>OrderApi__Due_Date__c</columns>
        <columns>OrderApi__Paid_Date__c</columns>
        <columns>OrderApi__Voided_Date__c</columns>
        <columns>OrderApi__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>